feat: create header

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  padding-top: 4rem;
   margin: 0px;
   color: #333;
   --type-first: Helvetica, Arial, sans-serif;
@@ -27,7 +28,8 @@ img {
   max-width: 100%;
 }
 
-button {
+button,
+input {
   display: block;
   font-size: 1rem;
   font-family: var(--type-first);
@@ -35,6 +37,6 @@ button {
 }
 .container {
   max-width: 50rem;
-  padding: 0 1rem;
+
   margin: 0 auto;
 }
